# aws-tag-schema-poc

./: README.md  process.py  pyproject.toml  sample-schema.toml
